--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>LOLA JOHN RUSTY WEBSITE</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='server.js'></script>
+    <script src='main.js'></script>
 </head>
 <body>
 
     <h1>HELLO GUYS THIS IS MY FIRST DOMAIN</h1>
-    <h1>HELLO GUYS THIS IS MY FIRST DOMAIN HAHAHAHA</h1>
+    <h1>IM JOHN RUSTY B LOLA</h1>
     
 </body>
 </html>
